src/test/ui/attributes/register-attr-tool-prelude.stderr
error[E0433]: failed to resolve: use of undeclared crate or module `tool`
  --> $DIR/register-attr-tool-prelude.rs:10:7
   |
LL |     #[tool::attr]
   |       ^^^^ use of undeclared crate or module `tool`

error: cannot find attribute `attr` in this scope
  --> $DIR/register-attr-tool-prelude.rs:9:7
   |
LL |     #[attr]
   |       ^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0433`.
